Implement transfer API (not tested yet)
